@startuml
skinparam classAttributeIconSize 0
hide circle
hide attributes
show methods

package "UserStory04 — Activate/Suspend" {
  class AdminUsersPage <<boundary>> {
    +handle(): void
    -showList(flash?, error?): void
    -submitSetStatus(data: array): void
  }

  class UsersController <<control>> {
    +listUsers(): Result
    +setStatus(userid:int, status:string): Result
  }

  class User <<entity>> {
    +all(): UserRow[]
    +existsById(userid:int): bool
    +updateStatus(userid:int, status:string): void
  }

  AdminUsersPage --> UsersController : showList()/submitSetStatus()
  UsersController ..> User : all(), existsById(), updateStatus()
}
@enduml
